--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
     "juicy-ace-editor": "^1.1.1"
   },
   "devDependencies": {
-    "web-component-tester": "^4.2.1",
+    "web-component-tester": ">=5.0.0",
     "starcounter-include": ">=2.0.1"
   }
 }
